--- a/app/src/main/res/drawable/bg_rounded_white.xml
+++ b/app/src/main/res/drawable/bg_rounded_white.xml
@@ -3,13 +3,13 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#EDEDED" /> <!-- Shadow color -->
-            <corners android:radius="20dp" /> <!-- Corner radius -->
+            <corners android:radius="@dimen/_50sdp" /> <!-- Corner radius -->
         </shape>
     </item>
     <item android:left="1dp" android:top="1dp" android:right="1dp" android:bottom="2dp">
         <shape android:shape="rectangle">
             <solid android:color="#FFFFFF" /> <!-- Background color -->
-            <corners android:radius="20dp" /> <!-- Corner radius -->
+            <corners android:radius="@dimen/_50sdp" /> <!-- Corner radius -->
         </shape>
     </item>
 </layer-list>
