--- a/app/src/main/res/layout/activity_forget.xml
+++ b/app/src/main/res/layout/activity_forget.xml
@@ -1,128 +1,245 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
+    <!-- <androidx.core.widget.NestedScrollView
+         android:background="@color/white"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent">
 
-    </data>
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:layout_marginLeft="@dimen/_20sdp"
+             android:layout_marginRight="@dimen/_20sdp"
+             android:orientation="vertical">
+
+             <ImageView
+                 android:layout_width="@dimen/_100sdp"
+                 android:layout_height="@dimen/_100sdp"
+                 android:layout_gravity="center"
+                 android:layout_marginTop="@dimen/_30sdp"
+                 android:src="@drawable/ic_login" />
+
+             <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="center"
+                 android:layout_marginTop="@dimen/_20sdp"
+                 android:text="Forgot Password"
+                 android:textColor="@color/black"
+                 android:textFontWeight="800"
+                 android:textStyle="bold"
+                 android:fontFamily="@font/nunitosans_10pt_bold"
+                 android:textSize="@dimen/_20sdp" />
+
+             <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="center"
+                 android:layout_marginTop="@dimen/_5sdp"
+                 android:textFontWeight="400"
+                 android:fontFamily="@font/nunitosans_10pt_bold"
+                 android:text="Enter your email to reset your password"
+                 android:textColor="#A2AEC1"
+                 android:textSize="@dimen/_14sdp" />
+
+             <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="left"
+                 android:layout_marginTop="@dimen/_15sdp"
+                 android:text="Email"
+                 android:textColor="@color/black"
+                 android:textFontWeight="400"
+                 android:fontFamily="@font/nunitosans_7pt_regular"
+                 android:textSize="@dimen/_12sdp" />
+
+             <LinearLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="@dimen/_40sdp"
+                 android:layout_marginTop="@dimen/_7sdp"
+                 android:orientation="horizontal"
+                 android:background="@drawable/bg_rounded_white"
+                 android:gravity="center_vertical">
+
+                 <ImageView
+                     android:layout_width="@dimen/_17sdp"
+                     android:layout_height="@dimen/_17sdp"
+                     android:layout_gravity="center"
+                     android:layout_marginLeft="@dimen/_12sdp"
+                     android:layout_marginRight="@dimen/_12sdp"
+                     android:src="@drawable/ic_email" />
+
+                 <EditText
+                     android:id="@+id/et_email"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:background="@null"
+                     android:maxLines="1"
+                     android:inputType="textEmailAddress"
+                     android:textColor="@color/black"
+                     android:textColorHint="@color/black"
+                     android:hint="Enter email" />
+
+             </LinearLayout>
+
+             <LinearLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="@dimen/_40sdp"
+                 android:layout_marginTop="@dimen/_20sdp"
+                 android:orientation="vertical"
+                 android:background="@drawable/bg_rounded_blue"
+                 android:gravity="center_vertical">
+
+                 <TextView
+                     android:id="@+id/forget_request"
+                     android:layout_width="wrap_content"
+                     android:layout_height="match_parent"
+                     android:layout_gravity="center"
+                     android:gravity="center"
+                     android:text="Request"
+                     android:textColor="@color/white"
+                     android:textFontWeight="700"
+                     android:fontFamily="@font/nunitosans_7pt_regular"
+                     android:textSize="@dimen/_14sdp" />
+
+             </LinearLayout>
+
+             <TextView
+                 android:id="@+id/tv_login"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="center"
+                 android:layout_marginTop="@dimen/_8sdp"
+                 android:text="Log in"
+                 android:textColor="#2F34B2"
+                 android:textFontWeight="700"
+                 android:fontFamily="@font/nunitosans_7pt_regular"
+                 android:textSize="@dimen/_14sdp" />
+
+         </LinearLayout>
+
+     </androidx.core.widget.NestedScrollView>-->
 
     <androidx.core.widget.NestedScrollView
-        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:fitsSystemWindows="true">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/_20sdp"
-            android:layout_marginRight="@dimen/_20sdp"
-            android:orientation="vertical">
+            android:background="@color/colorBlueLightBack">
 
             <ImageView
-                android:layout_width="@dimen/_100sdp"
-                android:layout_height="@dimen/_100sdp"
+                android:id="@+id/ivLogo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_60sdp"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/ic_login"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvReminisceScanner"
+                style="@style/ExtraBoldTextViewMedium16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_30sdp"
-                android:src="@drawable/ic_login" />
+                android:text="@string/reminisce_scanner"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ivLogo" />
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvDetail"
+                style="@style/RegularTextViewMedium10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:text="Forgot Password"
-                android:textColor="@color/black"
-                android:textFontWeight="800"
-                android:textStyle="bold"
-                android:fontFamily="@font/nunitosans_10pt_bold"
-                android:textSize="@dimen/_20sdp" />
+                android:text="@string/enter_your_email_to_reset_your_password"
+                android:textColor="@color/colorGrayText"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvReminisceScanner" />
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvEmail"
+                style="@style/RegularTextViewMedium9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:textFontWeight="400"
-                android:fontFamily="@font/nunitosans_10pt_bold"
-                android:text="Enter your email to reset your password"
-                android:textColor="#A2AEC1"
-                android:textSize="@dimen/_14sdp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_marginTop="@dimen/_15sdp"
-                android:text="Email"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_30sdp"
+                android:text="@string/email"
                 android:textColor="@color/black"
-                android:textFontWeight="400"
-                android:fontFamily="@font/nunitosans_7pt_regular"
-                android:textSize="@dimen/_12sdp" />
+                android:textSize="@dimen/_12sdp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvDetail" />
 
-            <LinearLayout
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tlEmail"
+                style="@style/TextInputLayoutStyle"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_40sdp"
-                android:layout_marginTop="@dimen/_7sdp"
-                android:orientation="horizontal"
-                android:background="@drawable/bg_rounded_white"
-                android:gravity="center_vertical">
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_15sdp"
+                app:errorIconDrawable="@null"
+                app:hintEnabled="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvEmail">
 
-                <ImageView
-                    android:layout_width="@dimen/_17sdp"
-                    android:layout_height="@dimen/_17sdp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/_12sdp"
-                    android:layout_marginRight="@dimen/_12sdp"
-                    android:src="@drawable/ic_email" />
-
-                <EditText
-                    android:id="@+id/et_email"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:maxLines="1"
+                    android:background="@drawable/bg_rounded_white"
+                    android:drawableStart="@drawable/ic_email"
+                    android:drawablePadding="@dimen/_10sdp"
+                    android:hint="@string/enter_email"
                     android:inputType="textEmailAddress"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/black"
-                    android:hint="Enter email" />
+                    android:theme="@style/TextInputLayoutEditTextTheme" />
 
-            </LinearLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnRequest"
+                style="@style/PrimaryButton"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_40sdp"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:orientation="vertical"
-                android:background="@drawable/bg_rounded_blue"
-                android:gravity="center_vertical">
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_40sdp"
+                android:layout_marginEnd="@dimen/_15sdp"
+                android:gravity="center"
+                android:text="@string/request"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tlEmail"
+                app:layout_constraintVertical_bias="0" />
 
-                <TextView
-                    android:id="@+id/forget_request"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:text="Request"
-                    android:textColor="@color/white"
-                    android:textFontWeight="700"
-                    android:fontFamily="@font/nunitosans_7pt_regular"
-                    android:textSize="@dimen/_14sdp" />
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tv_login"
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvLogin"
+                style="@style/BoldTextViewMedium13"
+                android:layout_marginTop="@dimen/_15sdp"
+                app:layout_constraintVertical_bias="0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:text="Log in"
-                android:textColor="#2F34B2"
-                android:textFontWeight="700"
-                android:fontFamily="@font/nunitosans_7pt_regular"
-                android:textSize="@dimen/_14sdp" />
+                app:layout_constraintTop_toBottomOf="@+id/btnRequest"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:text="@string/log_in"
+                android:textColor="@color/colorBlue"/>
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
+
 </layout>
