--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,12 +4,12 @@
 
     <!-- Primary brand color. -->
 
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/colorBlue</item>
+        <item name="colorPrimaryVariant">@color/colorBlue</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/colorBlue</item>
+        <item name="colorSecondaryVariant">@color/colorBlue</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
@@ -22,4 +22,123 @@
     <style name="Theme.ReminisceTicketing.AppBarOverlay"
         parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.ReminisceTicketing.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="ActivitySplash" parent="Theme.ReminisceTicketing">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">false</item>
+    </style>
+
+    <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">@color/bg_color_text_input_layout</item>
+        <item name="boxStrokeWidth">1dp</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/_50sdp</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/_50sdp</item>
+        <item name="boxCornerRadiusTopStart">@dimen/_50sdp</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/_50sdp</item>
+        <item name="hintEnabled">false</item>
+        <item name="boxBackgroundColor">@color/white</item>
+    </style>
+
+    <style name="TextInputLayoutEditTextTheme" parent="@android:style/Widget.EditText">
+        <item name="android:textSize">@dimen/_11ssp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/colorGrayText</item>
+        <item name="android:textCursorDrawable">@null</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textDirection">locale</item>
+        <item name="android:fontFamily">@font/nunito_semi_bold</item>
+        <item name="errorTextAppearance">@style/error_appearance</item>
+    </style>
+
+    <style name="error_appearance" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/colorGrayText</item>
+        <item name="android:textSize">@dimen/_12ssp</item>
+        <item name="android:fontFamily">@font/nunito_regular</item>
+    </style>
+
+
+    <!--ExtraBold font text view-->
+    <style name="ExtraBoldTextViewMedium16" parent="@android:style/Widget.TextView">
+        <item name="android:textSize">@dimen/_16ssp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/nunito_extra_bold</item>
+        <item name="android:textDirection">locale</item>
+    </style>
+
+    <!--SemiBold font text view-->
+    <style name="SemiBoldTextViewMedium16" parent="@android:style/Widget.TextView">
+        <item name="android:textSize">@dimen/_16ssp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/nunito_semi_bold</item>
+        <item name="android:textDirection">locale</item>
+    </style>
+
+    <style name="SemiBoldTextViewMedium14" parent="@android:style/Widget.TextView">
+        <item name="android:textSize">@dimen/_14ssp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/nunito_semi_bold</item>
+        <item name="android:textDirection">locale</item>
+    </style>
+
+
+    <!--Regular font text view-->
+    <style name="RegularTextViewMedium9" parent="@android:style/Widget.TextView">
+        <item name="android:textSize">@dimen/_9ssp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/nunito_semi_bold</item>
+        <item name="android:textDirection">locale</item>
+    </style>
+
+    <style name="RegularTextViewMedium10" parent="@android:style/Widget.TextView">
+        <item name="android:textSize">@dimen/_10ssp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/nunito_semi_bold</item>
+        <item name="android:textDirection">locale</item>
+    </style>
+
+    <style name="RegularTextViewMedium14" parent="@android:style/Widget.TextView">
+        <item name="android:textSize">@dimen/_14ssp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/nunito_semi_bold</item>
+        <item name="android:textDirection">locale</item>
+    </style>
+
+    <style name="RegularTextViewMedium12" parent="@android:style/Widget.TextView">
+        <item name="android:textSize">@dimen/_12ssp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/nunito_semi_bold</item>
+        <item name="android:textDirection">locale</item>
+    </style>
+
+    <!--Bold font text view-->
+    <style name="BoldTextViewMedium13" parent="@android:style/Widget.TextView">
+        <item name="android:textSize">@dimen/_13ssp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:textDirection">locale</item>
+    </style>
+
+    <style name="PrimaryButton" parent="Widget.MaterialComponents.Button">
+        <item name="cornerRadius">@dimen/_50sdp</item>
+        <item name="android:textSize">@dimen/_13ssp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingTop">@dimen/_10sdp</item>
+        <item name="android:paddingBottom">@dimen/_10sdp</item>
+        <item name="android:paddingEnd">@dimen/_12sdp</item>
+        <item name="android:paddingStart">@dimen/_12sdp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:textDirection">locale</item>
+    </style>
+
+    <style name="AppThemeForWhiteStatusBar" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorBlue</item>
+        <item name="colorPrimaryDark">@color/colorBlue</item>
+        <item name="colorAccent">@color/colorBlue</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:statusBarColor">@color/colorBlueLightBack</item>
+    </style>
 </resources>
