--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:orientation="vertical"
             android:layout_height="match_parent">
 
-            <LinearLayout
+           <!-- <LinearLayout
                 android:id="@+id/ll_main"
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
@@ -59,15 +59,41 @@
                     android:layout_gravity="center"
                     android:visibility="gone"
                     android:src="@drawable/ic_notification" />
-            </LinearLayout>
-
+            </LinearLayout>-->
+            <ImageView
+                android:id="@+id/menuButton"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:src="@drawable/ic_menu"
+                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_35sdp"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:fontFamily="@font/nunitosans_10pt_bold"
+                android:textColor="@color/black"
+                android:text="@string/home"
+                android:layout_marginTop="@dimen/_5sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="@dimen/_15ssp" />
             <FrameLayout
                 android:id="@+id/fragmentContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/_45sdp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ll_main"/>
+                app:layout_constraintTop_toBottomOf="@+id/menuButton"/>
 
 
             <!-- Add your main content here -->
