--- a/app/src/main/res/layout/layout_drawer.xml
+++ b/app/src/main/res/layout/layout_drawer.xml
@@ -142,6 +142,7 @@
             android:layout_height="@dimen/_40sdp"
             android:layout_marginLeft="@dimen/_7sdp"
             android:layout_marginRight="@dimen/_7sdp"
+            android:visibility="gone"
             android:orientation="horizontal">
 
             <ImageView
