--- a/app/src/main/res/layout/activity_scan_with_camera.xml
+++ b/app/src/main/res/layout/activity_scan_with_camera.xml
@@ -44,10 +44,21 @@
         android:gravity="center_horizontal"
         android:src="@drawable/ic_back"
         android:text="Scan Ticket"
-        android:textSize="@dimen/_18sdp"
         android:textColor="@color/white"
+        android:textSize="@dimen/_18sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
