--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,37 +24,69 @@
         android:orientation="vertical"
         tools:context=".ui.home.HomeFragment">
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/et_search"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_35sdp"
+       <!-- <androidx.appcompat.widget.AppCompatEditText
             android:layout_marginTop="@dimen/_5sdp"
-            android:layout_marginEnd="@dimen/_45sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:id="@+id/et_search"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:background="@drawable/bg_rounded_white_10"
             android:drawableStart="@drawable/ic_search_blue"
             android:drawablePadding="@dimen/_10sdp"
             android:hint="@string/search"
             android:imeOptions="actionDone"
             android:padding="@dimen/_10sdp"
+            app:layout_constraintEnd_toStartOf="@+id/searchText"
+            app:layout_constraintBottom_toBottomOf="@+id/searchText"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/searchText" />-->
+
+        <com.google.android.material.textfield.TextInputLayout
+            app:layout_constraintBottom_toBottomOf="@+id/searchText"
+            android:id="@+id/tlSearch"
+            style="@style/TextInputLayoutStyleSearch"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:background="@drawable/bg_edit_text_search_white"
+            app:boxStrokeWidth="0dp"
+            app:endIconDrawable="@drawable/ic_clear"
+            app:endIconMode="clear_text"
+            app:hintEnabled="false"
+            app:layout_constraintEnd_toStartOf="@+id/searchText"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/searchText">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etSearch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_search_blue"
+                android:drawablePadding="@dimen/_5sdp"
+                android:drawableTint="@color/colorBlue"
+                android:hint="@string/search"
+                android:textColor="@color/black"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
+                android:padding="@dimen/_10sdp"
+                android:paddingStart="@dimen/_15sdp"
+                android:paddingEnd="0dp"
+                android:theme="@style/TextInputLayoutEditTextTheme" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <ImageView
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/searchText"
-            android:layout_width="@dimen/_38sdp"
-            android:layout_height="@dimen/_35sdp"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_5sdp"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:layout_marginRight="@dimen/_5sdp"
-            android:background="@drawable/bg_blue_rounded_5"
-            android:gravity="center"
             android:orientation="vertical"
-            android:padding="@dimen/_10sdp"
-            android:src="@drawable/ic_search"
-            app:layout_constraintLeft_toRightOf="@+id/et_search"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/white" />
+            android:src="@drawable/ic_serch_home"
+           app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/app_name" />
 
         <TextView
             android:id="@+id/event_list"
@@ -67,12 +99,14 @@
             android:textColor="@color/black"
             android:textSize="@dimen/_14ssp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_search" />
+            app:layout_constraintTop_toBottomOf="@+id/tlSearch" />
 
         <androidx.recyclerview.widget.RecyclerView
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="@dimen/_5sdp"
             android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
