--- a/app/src/main/res/layout/layout_drawer.xml
+++ b/app/src/main/res/layout/layout_drawer.xml
@@ -26,22 +26,24 @@
             android:fontFamily="@font/nunitosans_10pt_bold" />
 
         <LinearLayout
+            android:background="@drawable/ic_select_menu"
             android:id="@+id/home_item"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
-            android:layout_marginLeft="@dimen/_7sdp"
             android:layout_marginTop="@dimen/_7sdp"
-            android:layout_marginRight="@dimen/_7sdp"
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/ivHome"
+                android:layout_marginStart="@dimen/_10sdp"
                 android:layout_width="@dimen/_23sdp"
                 android:layout_height="@dimen/_23sdp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_home"
-                app:tint="#2F34B2" />
+                app:tint="@color/white" />
 
             <TextView
+                android:id="@+id/tvHome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -50,13 +52,13 @@
                 android:fontFamily="@font/nunito_regular"
                 android:gravity="left"
                 android:text="Home"
-
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textFontWeight="800"
                 android:textSize="@dimen/_11sdp"
                 android:textStyle="bold" />
 
             <ImageView
+                android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_width="@dimen/_12sdp"
                 android:layout_height="@dimen/_12sdp"
                 android:layout_gravity="center"
@@ -67,11 +69,11 @@
             android:id="@+id/scan_item"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
-            android:layout_marginLeft="@dimen/_7sdp"
-            android:layout_marginRight="@dimen/_7sdp"
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/ivScanner"
+                android:layout_marginStart="@dimen/_10sdp"
                 android:layout_width="@dimen/_23sdp"
                 android:layout_height="@dimen/_23sdp"
                 android:layout_gravity="center"
@@ -79,6 +81,7 @@
                 app:tint="#2F34B2" />
 
             <TextView
+                android:id="@+id/tvScanner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -93,6 +96,7 @@
                 android:textStyle="bold" />
 
             <ImageView
+                android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_width="@dimen/_12sdp"
                 android:layout_height="@dimen/_12sdp"
                 android:layout_gravity="center"
@@ -104,11 +108,11 @@
             android:id="@+id/change_password"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
-            android:layout_marginLeft="@dimen/_7sdp"
-            android:layout_marginRight="@dimen/_7sdp"
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/ivChangePassword"
+                android:layout_marginStart="@dimen/_10sdp"
                 android:layout_width="@dimen/_23sdp"
                 android:layout_height="@dimen/_23sdp"
                 android:layout_gravity="center"
@@ -116,6 +120,7 @@
                 app:tint="#2F34B2" />
 
             <TextView
+                android:id="@+id/tvChangePassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -130,6 +135,7 @@
                 android:textStyle="bold" />
 
             <ImageView
+                android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_width="@dimen/_12sdp"
                 android:layout_height="@dimen/_12sdp"
                 android:layout_gravity="center"
@@ -140,12 +146,11 @@
             android:id="@+id/help_item"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
-            android:layout_marginLeft="@dimen/_7sdp"
-            android:layout_marginRight="@dimen/_7sdp"
             android:visibility="gone"
             android:orientation="horizontal">
 
             <ImageView
+                android:layout_marginStart="@dimen/_10sdp"
                 android:layout_width="@dimen/_23sdp"
                 android:layout_height="@dimen/_23sdp"
                 android:layout_gravity="center"
@@ -167,6 +172,7 @@
                 android:textStyle="bold" />
 
             <ImageView
+                android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_width="@dimen/_12sdp"
                 android:layout_height="@dimen/_12sdp"
                 android:layout_gravity="center"
@@ -177,11 +183,11 @@
             android:id="@+id/logout"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
-            android:layout_marginLeft="@dimen/_7sdp"
-            android:layout_marginRight="@dimen/_7sdp"
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/ivLogOut"
+                android:layout_marginStart="@dimen/_10sdp"
                 android:layout_width="@dimen/_23sdp"
                 android:layout_height="@dimen/_23sdp"
                 android:layout_gravity="center"
@@ -189,6 +195,7 @@
                 app:tint="#2F34B2" />
 
             <TextView
+                android:id="@+id/tvLogOut"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -203,6 +210,7 @@
                 android:textStyle="bold" />
 
             <ImageView
+                android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_width="@dimen/_12sdp"
                 android:layout_height="@dimen/_12sdp"
                 android:layout_gravity="center"
