--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -247,7 +247,6 @@
                     android:background="@drawable/bg_rounded_white"
                     android:drawableStart="@drawable/ic_email"
                     android:drawablePadding="@dimen/_10sdp"
-                    android:hint="@string/enter_email"
                     android:inputType="textEmailAddress"
                     android:theme="@style/TextInputLayoutEditTextTheme" />
 
@@ -289,7 +288,6 @@
                     android:background="@drawable/bg_rounded_white"
                     android:drawableStart="@drawable/ic_pass"
                     android:drawablePadding="@dimen/_10sdp"
-                    android:hint="@string/enter_password"
                     android:inputType="textPassword"
                     android:theme="@style/TextInputLayoutEditTextTheme" />
 
@@ -324,6 +322,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvForgetPassword"
                 app:layout_constraintVertical_bias="0" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
