--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -220,6 +220,18 @@
 <!--                android:textFontWeight="700"-->
 <!--                android:fontFamily="@font/nunitosans_7pt_regular"-->
 <!--                android:textSize="@dimen/_14sdp" />-->
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
     <!--<LinearLayout
         android:layout_width="match_parent"
